--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: 'Times New Roman';
-  font-size: 11pt;
-  background-color: #000000;
-  color: #ffffff;
+  font-size: 14pt;
+  background-color: #0f0fff;
+  color: #000000;
 }
 h1 {
-  font-size: 24pt;
+  font-size: 30pt;
 }
