--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Calibri';
 	font-size: 14pt;
-	background-color: #000000;
+	background-color: #6060b0;
 	color: #ffffff;
 }
 h1 {
@@ -16,7 +16,7 @@ table td{
 	padding: 8px;
 }
 table th{
-	background-color: #5050a0;
+	background-color: #505080;
 	color: #ffffff;
 	padding: 8px;
 }
@@ -41,7 +41,7 @@ table tr:nth-child(odd){
 }
 .portrait {
 	margin: 0px;
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8), 0px 5px 30px rgba(100, 100, 255, 0.8);
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
 }
 .button {
 	display: block;
@@ -53,16 +53,17 @@ table tr:nth-child(odd){
 	transition-duration: 0.1s;
 	color: #ffffff;
 	text-decoration: none;
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
 }
 .button:hover {
 	filter: brightness(180%);
 	color: #ffffff;
 	text-decoration: none;
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8), 0px 0px 15px rgba(100, 100, 255, 0.8);
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
 }
 .button:active {
 	filter: brightness(80%);
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8), 0px 0px 30px rgba(100, 100, 255, 0.8);
+	box-shadow: 0px 5px 20px rgba(0, 0, 0, 1), 0px 5px 20px rgba(0, 0, 0, 1);
 }
 .button p {
 	margin: 0px;
@@ -75,7 +76,7 @@ table tr:nth-child(odd){
 	background-color: #ffffff;
 	padding: 25px;
 	color: #000000;
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8), 0px 5px 30px rgba(100, 100, 255, 0.8);
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
 }
 .gallery {
 	display: grid;
@@ -90,7 +91,7 @@ table tr:nth-child(odd){
 	padding: 0px;
 	color: #000000;
 	background-color: #ffffff;
-	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.8), 0px 2px 15px rgba(100, 100, 255, 0.8);
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
 	align-self: start
 }
 .image_card_desc {
